--- a/app/src/main/res/layout/inbox_divider.xml
+++ b/app/src/main/res/layout/inbox_divider.xml
@@ -14,7 +14,14 @@
         android:paddingBottom="16dp"
         android:text="DividerName"
         android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintTop_toBottomOf="@+id/dividerName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
