--- a/app/src/main/res/layout/content_add_task.xml
+++ b/app/src/main/res/layout/content_add_task.xml
@@ -144,6 +144,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
                             android:orientation="horizontal"
                             android:visibility="visible">
 
@@ -156,8 +157,9 @@
                             android:layout_marginStart="8dp"
                             android:layout_marginTop="16dp"
                             android:layout_marginBottom="16dp"
+                            android:layout_weight="0"
                             android:background="@android:color/transparent"
-                            app:srcCompat="@drawable/ic_add_tag_black_24dp"
+                            android:src="@drawable/ic_add_tag_black_24dp"
                             custom:cyaneaIconBackground="background" />
 
                     </LinearLayout>
