--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:paddingStart="8dp"
+        android:alpha=".54"
         android:paddingRight="8dp"
         android:src="@drawable/ic_more_horiz_black_24dp"
         android:visibility="visible"
