--- a/app/src/main/res/layout/view_title_tags.xml
+++ b/app/src/main/res/layout/view_title_tags.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="24dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:visibility="visible"
         app:barrierAllowsGoneWidgets="true"
@@ -24,6 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="24dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -47,7 +49,7 @@
         android:id="@+id/taskName2"
         android:layout_width="0dp"
         android:layout_height="51dp"
-        android:alpha=".70"
+        android:alpha=".85"
         android:ellipsize="end"
         android:paddingStart="16dp"
         android:paddingTop="16dp"
