- more refactoring - imported nestedscrollview compatible inboxrecyclerview locally until library is updated - return of header

--- a/app/src/main/res/layout/activity_archive.xml
+++ b/app/src/main/res/layout/activity_archive.xml
@@ -19,9 +19,15 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/archiveFragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/archiveRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="56dp">
+
+
+        </androidx.recyclerview.widget.RecyclerView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
