--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".InboxFragment">
 
-    <!--<TextView
+    <TextView
         android:id="@+id/noTasks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -36,7 +36,7 @@
             <include
                 layout="@layout/inbox_header"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />-->
+                android:layout_height="wrap_content" />
 
             <me.saket.inboxrecyclerview.InboxRecyclerView
                 android:id="@+id/inboxRecycler"
@@ -48,9 +48,9 @@
 
             </me.saket.inboxrecyclerview.InboxRecyclerView>
 
-        <!---</LinearLayout>
+        </LinearLayout>
 
-    </androidx.core.widget.NestedScrollView>-->
+    </androidx.core.widget.NestedScrollView>
     <me.saket.inboxrecyclerview.page.ExpandablePageLayout
         android:id="@+id/expandable_page_inbox"
         android:layout_width="match_parent"
