--- a/app/src/main/res/layout/fragment_browse.xml
+++ b/app/src/main/res/layout/fragment_browse.xml
@@ -102,6 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:layout_marginBottom="@dimen/rv_padding_for_bottom_bar"
                 android:layoutAnimation="@anim/rv_slide_from_bottom_layout_anim"
                 app:layout_constraintTop_toBottomOf="@+id/browseTagCardHolder" />
 
