--- a/app/src/main/res/layout/inbox_header.xml
+++ b/app/src/main/res/layout/inbox_header.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
+    <com.andb.apps.todo.views.CyaneaTextView
         android:id="@+id/task_count_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
+    <com.andb.apps.todo.views.CyaneaTextView
         android:id="@+id/task_path_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,12 +35,12 @@
         android:layout_marginTop="36dp"
         android:layout_marginBottom="36dp"
         android:background="@drawable/rounded_button_background"
-        android:backgroundTintMode="src_over"
+        android:backgroundTintMode="src_atop"
         android:drawableLeft="@drawable/ic_label_black_24dp"
         android:drawablePadding="12dp"
         android:elevation="8dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="24dp"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
         android:text="TAGS"
         android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Button"
         app:layout_constraintBottom_toBottomOf="parent"
