--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toTopOf="@+id/topLayout" />
 
 
-    <CheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/item1"
         layout="@layout/inbox_checklist_list_item"
         android:layout_width="wrap_content"
@@ -63,7 +63,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/topLayout" />
 
-    <CheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/item2"
         layout="@layout/inbox_checklist_list_item"
         android:layout_width="wrap_content"
@@ -77,7 +77,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item1" />
 
-    <CheckBox
+    <androidx.appcompat.widget.AppCompatCheckBox
         android:id="@+id/item3"
         layout="@layout/inbox_checklist_list_item"
         android:layout_width="wrap_content"
