--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -97,5 +97,8 @@
     <style name="AppThemeNavDrawer" parent="AppThemeGlobal">
         <item name="android:fontFamily">@font/worksans_semibold</item>
     </style> <!--for navdrawer font-->
+    <style name="AppThemeTabLayout" parent="Theme.MaterialComponents.Light">
+        <item name="android:fontFamily">@font/worksans_medium</item>
+    </style>
 
 </resources>
