animations for sublist expansion and bottom bar on taskview

--- a/app/src/main/res/layout/inbox_list_item.xml
+++ b/app/src/main/res/layout/inbox_list_item.xml
@@ -8,6 +8,7 @@
     android:layout_height="wrap_content"
     android:elevation="0dp"
     android:theme="@style/AppThemeGlobal"
+    android:animateLayoutChanges="true"
     android:visibility="visible">
 
 
