--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
 
 
 
-    <androidx.viewpager.widget.ViewPager
+    <com.andb.apps.todo.views.InboxRVViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
