--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,20 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/app_bar_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="Search"
-        app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="android.widget.SearchView" />
-    <item
-        android:id="@+id/app_bar_filter"
-        android:icon="@drawable/ic_sort_black_24dp"
-        android:title="Sort"
-        app:showAsAction="ifRoom"/>
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    <group android:id="@+id/toolbar_main">
+        <item
+            android:id="@+id/app_bar_search"
+            android:icon="@drawable/ic_search_black_24dp"
+            android:title="Search"
+            app:showAsAction="collapseActionView|ifRoom"
+            app:actionViewClass="android.widget.SearchView" />
+        <item
+            android:id="@+id/app_bar_filter"
+            android:icon="@drawable/ic_sort_black_24dp"
+            android:title="Sort"
+            app:showAsAction="ifRoom"/>
+        <item
+            android:id="@+id/action_settings"
+            android:orderInCategory="100"
+            android:title="@string/action_settings"
+            app:showAsAction="never" />
+    </group>
+    <group android:id="@+id/toolbar_task_view">
+        <item
+            android:id="@+id/app_bar_edit"
+            android:icon="@drawable/ic_edit_black_24dp"
+            android:title="Edit"
+            app:showAsAction="ifRoom"
+            />
+        <item
+            android:id="@+id/app_bar_reschedule"
+            android:icon="@drawable/ic_notifications_black_24dp"
+            android:title="Reschedule"
+            app:showAsAction="ifRoom"
+            />
+    </group>
+
 </menu>
