--- a/app/src/main/res/layout/inbox_divider.xml
+++ b/app/src/main/res/layout/inbox_divider.xml
@@ -23,5 +23,5 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@+id/dividerName" />
+        app:layout_constraintTop_toBottomOf="@id/dividerName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
